mostly fixed REI integration