@@ -11,6 +11,8 @@ import me.shedaniel.rei.api.client.gui.widgets.Widgets;
 import me.shedaniel.rei.api.client.registry.display.DisplayCategory;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
+import me.shedaniel.rei.api.common.entry.EntryStack;
+import me.shedaniel.rei.api.common.util.EntryIngredients;
 import me.shedaniel.rei.api.common.util.EntryStacks;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
@@ -24,6 +26,8 @@ import net.minecraft.util.registry.Registry;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Environment(EnvType.CLIENT)
 public class ArtisRecipeCategory<R extends Recipe> implements DisplayCategory<ArtisRecipeDisplay> {
@@ -58,47 +62,48 @@ public class ArtisRecipeCategory<R extends Recipe> implements DisplayCategory<Ar
     @Override
     public List<Widget> setupDisplay(ArtisRecipeDisplay recipeDisplay, Rectangle bounds) {
         Point startPoint = new Point(bounds.getCenterX() - (getDisplayWidth(recipeDisplay) / 2) + 17, bounds.getCenterY() - (getDisplayHeight() / 2) + 15);
-
-        Artis.logger.info(this::getDisplayHeight);
+        
         if (artisTableType.hasCatalystSlot() && artisTableType.getHeight() == 1) {
             bounds.setSize(bounds.width, bounds.height + 18);
         }
 
-        List<Widget> widgets = new LinkedList(Arrays.asList(Widgets.createRecipeBase(bounds)));
+        List<Widget> widgets;
         if (artisTableType.hasColor()) {
-            widgets = new LinkedList(Arrays.asList(Widgets.createRecipeBase(bounds).color(artisTableType.getColor(), artisTableType.getColor())));
+            widgets = new LinkedList(List.of(Widgets.createRecipeBase(bounds).color(artisTableType.getColor())));
+        } else {
+            widgets = new LinkedList(List.of(Widgets.createRecipeBase(bounds)));
         }
 
         List<EntryIngredient> input = recipeDisplay.getInputEntries();
         List<ColorableEntryWidget> slots = Lists.newArrayList();
 
-        /*for (int y = 0; y < artisTableType.getHeight(); y++)
+        for (int y = 0; y < artisTableType.getHeight(); y++)
             for (int x = 0; x < artisTableType.getWidth(); x++)
-                if (artisTableType.hasColor())
+                if (artisTableType.hasColor()) {
                     slots.add(ColorableEntryWidget.create(startPoint.x + 1 + x * 18, startPoint.y + 1 + y * 18, artisTableType.getColor()));
-                else
+                } else {
                     slots.add(ColorableEntryWidget.create(startPoint.x + 1 + x * 18, startPoint.y + 1 + y * 18, 0xFFFFFF));
+                }
         for (int i = 0; i < input.size(); i++) {
-            if (recipeDisplay != null) {
-                if (!input.get(i).isEmpty())
-                    slots.get(getSlotWithSize(recipeDisplay, i, artisTableType.getWidth())).entries(input.get(i));
-            } else if (!input.get(i).isEmpty())
-                slots.get(i).entries(input.get(i));
+            if (!input.get(i).isEmpty())
+                slots.get(getSlotWithSize(recipeDisplay, i, artisTableType.getWidth())).entries(input.get(i));
         }
 
         widgets.addAll(slots);
-
+    
+        List<EntryIngredient> output = recipeDisplay.getOutputEntries();
+        EntryIngredient catalyst = EntryIngredients.ofIngredient(recipeDisplay.getCatalyst());
         if (artisTableType.hasColor()) {
             widgets.add(TransparentArrowWidget.create(new Point(slots.get(slots.size() - 1).getX() + 24, startPoint.y + (getDisplayHeight() / 2) - 23)).disableAnimation());
-            widgets.add(ColorableEntryWidget.create(slots.get(slots.size() - 1).getX() + 55, startPoint.y + (getDisplayHeight() / 2) - 22, artisTableType.getColor()).entry(recipeDisplay.getOutputEntries().get(0)));
+            widgets.add(ColorableEntryWidget.create(slots.get(slots.size() - 1).getX() + 55, startPoint.y + (getDisplayHeight() / 2) - 22, artisTableType.getColor()).markOutput().entries(output.get(0)));
             if (artisTableType.hasCatalystSlot())
-                widgets.add(ColorableEntryWidget.create(slots.get(slots.size() - 1).getX() + 28, startPoint.y + (getDisplayHeight() / 2) - 4, artisTableType.getColor()).entries(Stream.of(recipeDisplay.getCatalyst().getMatchingStacksClient()).map(EntryStack::create).collect(Collectors.toList())));
+                widgets.add(ColorableEntryWidget.create(slots.get(slots.size() - 1).getX() + 28, startPoint.y + (getDisplayHeight() / 2) - 4, artisTableType.getColor()).entries(catalyst));
         } else {
             widgets.add(Widgets.createArrow(new Point(slots.get(slots.size() - 1).getX() + 24, startPoint.y + (getDisplayHeight() / 2) - 23)).disableAnimation());
-            widgets.add(Widgets.createSlot(new Point(slots.get(slots.size() - 1).getX() + 55, startPoint.y + (getDisplayHeight() / 2) - 22)).entry(recipeDisplay.getOutputEntries().get(0)));
+            widgets.add(Widgets.createSlot(new Point(slots.get(slots.size() - 1).getX() + 55, startPoint.y + (getDisplayHeight() / 2) - 22)).markOutput().entries(output.get(0)));
             if (artisTableType.hasCatalystSlot())
-                widgets.add(Widgets.createSlot(new Point(slots.get(slots.size() - 1).getX() + 28, startPoint.y + (getDisplayHeight() / 2) - 4)).entries(Stream.of(recipeDisplay.getCatalyst().getMatchingStacksClient()).map(EntryStack::create).collect(Collectors.toList())));
-        }*/
+                widgets.add(Widgets.createSlot(new Point(slots.get(slots.size() - 1).getX() + 28, startPoint.y + (getDisplayHeight() / 2) - 4)).entries(catalyst));
+        }
 
         if (artisTableType.hasCatalystSlot())
             widgets.add(Widgets.createLabel(new Point(slots.get(slots.size() - 1).getX() + 35, startPoint.y + (getDisplayHeight() / 2) + 14), new LiteralText(Formatting.RED + "-" + recipeDisplay.getCatalystCost())).centered());
